--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(PLATFORM_QT "Build Qt frontend." ON)
+option(PLATFORM_HYDRA "Build Hydra core" OFF)
+
+if (PLATFORM_HYDRA)
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+  add_subdirectory(src/platform/hydra ${CMAKE_CURRENT_BINARY_DIR}/bin/hydra/)
+endif()
 
 add_subdirectory(src/nba)
 add_subdirectory(src/platform/core)
